// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangedSlider Snapshot Tests renders RangedSlider with marks correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
      style="grid-template-columns: 0% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 2.999999999999993% 3.000000000000007% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3%;"
    >
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark ms-Slider-firstMark"
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 0%; width: 100%; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(100%); transition: none;"
      >
        <input
          class=""
          max="100"
          min="0"
          step="3"
          type="range"
          value="100"
        />
        <div
          class="ms-Slider-thumb upper"
        />
      </div>
      <div
        class=""
        style="transform: translateX(0%); transition: none;"
      >
        <input
          class=""
          max="100"
          min="0"
          step="3"
          type="range"
          value="0"
        />
        <div
          class="ms-Slider-thumb lower"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`RangedSlider Snapshot Tests renders disabled RangedSlider correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 0%; width: 100%; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(100%); transition: none;"
      >
        <input
          class=""
          disabled=""
          max="10"
          min="0"
          step="1"
          type="range"
          value="10"
        />
        <div
          class="ms-Slider-thumb upper"
        />
      </div>
      <div
        class=""
        style="transform: translateX(0%); transition: none;"
      >
        <input
          class=""
          disabled=""
          max="10"
          min="0"
          step="1"
          type="range"
          value="0"
        />
        <div
          class="ms-Slider-thumb lower"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`RangedSlider Snapshot Tests renders horizontal RangedSlider correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 50%; width: 20%; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(70%); transition: none;"
      >
        <input
          class=""
          max="10"
          min="0"
          step="1"
          type="range"
          value="7"
        />
        <div
          class="ms-Slider-thumb upper"
        />
      </div>
      <div
        class=""
        style="transform: translateX(50%); transition: none;"
      >
        <input
          class=""
          max="10"
          min="0"
          step="1"
          type="range"
          value="5"
        />
        <div
          class="ms-Slider-thumb lower"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`RangedSlider Snapshot Tests renders horizontal Slider with (custom marks) correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
      style="grid-template-columns: 1% 2% 4.000000000000001% 0.9999999999999991%;"
    >
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 0%; width: 100%; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(100%); transition: none;"
      >
        <input
          class=""
          max="100"
          min="0"
          step="1"
          type="range"
          value="100"
        />
        <div
          class="ms-Slider-thumb upper"
        />
      </div>
      <div
        class=""
        style="transform: translateX(0%); transition: none;"
      >
        <input
          class=""
          max="100"
          min="0"
          step="1"
          type="range"
          value="0"
        />
        <div
          class="ms-Slider-thumb lower"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`RangedSlider Snapshot Tests renders vertical RangedSlider correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="top: 2%; height: 6%; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateY(8%); transition: none;"
      >
        <input
          class=""
          max="100"
          min="0"
          step="1"
          type="range"
          value="8"
        />
        <div
          class="ms-Slider-thumb upper"
        />
      </div>
      <div
        class=""
        style="transform: translateY(2%); transition: none;"
      >
        <input
          class=""
          max="100"
          min="0"
          step="1"
          type="range"
          value="2"
        />
        <div
          class="ms-Slider-thumb lower"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`RangedSlider Snapshot Tests renders vertical Slider with (custom marks) correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
      style="grid-template-rows: 2% 3% 4% 9%;"
    >
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="top: 0%; height: 100%; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateY(100%); transition: none;"
      >
        <input
          class=""
          max="100"
          min="0"
          step="1"
          type="range"
          value="100"
        />
        <div
          class="ms-Slider-thumb upper"
        />
      </div>
      <div
        class=""
        style="transform: translateY(0%); transition: none;"
      >
        <input
          class=""
          max="100"
          min="0"
          step="1"
          type="range"
          value="0"
        />
        <div
          class="ms-Slider-thumb lower"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;
